--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "tailwindcss": "^3.3.1"
