--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "formik": "^2.2.9",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.1.0",
     "next": "13.2.4",
     "react": "18.2.0",
