--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "type": "module"
   },
   "dependencies": {
     "axios": "^1.4.0",
@@ -15,6 +16,7 @@
     "eslint-config-next": "13.2.4",
     "formik": "^2.2.9",
     "jsonwebtoken": "^9.0.0",
+    "mongodb": "^5.5.0",
     "mongoose": "^7.1.0",
     "next": "13.2.4",
     "react": "18.2.0",
