--- a/package.json
+++ b/package.json
@@ -6,24 +6,31 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "type": "module"
+    "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^1.4.0",
-    "deepmerge": "^4.3.1",
-    "eslint": "8.37.0",
-    "eslint-config-next": "13.2.4",
+    "@heroicons/react": "^2.0.14",
+    "axios": "^1.3.1",
+    "clsx": "^1.2.1",
+    "deepmerge": "^4.3.0",
     "formik": "^2.2.9",
     "jsonwebtoken": "^9.0.0",
-    "mongodb": "^5.5.0",
-    "mongoose": "^7.1.0",
-    "next": "13.2.4",
+    "mongoose": "^7.0.1",
+    "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "yup": "^1.1.1"
+    "yup": "^0.32.11"
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.1"
+    "autoprefixer": "^10.4.13",
+    "eslint": "^8.33.0",
+    "eslint-config-next": "^13.1.6",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "postcss": "^8.4.21",
+    "prettier": "^2.8.3",
+    "prettier-plugin-tailwindcss": "^0.2.2",
+    "tailwindcss": "^3.2.4"
   }
 }
