--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.0.14",
     "axios": "^1.3.1",
+    "child_process": "^1.0.2",
     "clsx": "^1.2.1",
     "deepmerge": "^4.3.0",
     "formik": "^2.2.9",
